Metodos da agenda controller