@@ -5,6 +5,7 @@ import com.jan1ooo.agenda.domain.dto.PacienteDto;
 import com.jan1ooo.agenda.domain.dto.mapper.AgendaMapper;
 import com.jan1ooo.agenda.domain.repository.AgendaRepository;
 import com.jan1ooo.agenda.exception.BusinessException;
+import com.jan1ooo.agenda.exception.RecordNotFoundException;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +16,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @Transactional
@@ -25,11 +27,11 @@ public class AgendaService {
     private final AgendaMapper mapper;
 
     public List<AgendaDto> findAll(){
-        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
     public AgendaDto findById(@Positive Long id){
-        return mapper.toDto(repository.findById(id).get());
+        return mapper.toDto(repository.findById(id).orElseThrow(() -> new RecordNotFoundException(id)));
     }
 
     public AgendaDto save(@Valid AgendaDto agendaDto){
